// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MoneyInput Component matches snapshot (en-CA) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus,
.c3:disabled {
  border: 0;
  box-shadow: none;
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <div
    class="c2 eds-TextInput-control"
  >
    <input
      class="c3"
      data-testid="text-input"
      id="uuid1"
      inputmode="numeric"
      type="text"
      value="$100.00"
    />
  </div>
</div>
`;

exports[`MoneyInput Component matches snapshot (en-US) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus,
.c3:disabled {
  border: 0;
  box-shadow: none;
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <div
    class="c2 eds-TextInput-control"
  >
    <input
      class="c3"
      data-testid="text-input"
      id="uuid1"
      inputmode="numeric"
      type="text"
      value="$100.00"
    />
  </div>
</div>
`;

exports[`MoneyInput Component matches snapshot (fr-CA) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus,
.c3:disabled {
  border: 0;
  box-shadow: none;
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
  width: 132px;
}

<div
  class="c0 c1"
  data-testid="field-container"
>
  <div
    class="c2 eds-TextInput-control"
  >
    <input
      class="c3"
      data-testid="text-input"
      id="uuid1"
      inputmode="numeric"
      type="text"
      value="100,00 $"
    />
  </div>
</div>
`;
